--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,12 @@
-<app-header />
-
-<main>
-
-  <div id="dashboard">
-    <app-dasboard-item
-      [image]="{ src: 'status.png', alt: 'A signal symbol' }"
-      title="Server Status"
-    >
-      <app-server-status />
-    </app-dasboard-item>
-
-    <app-dasboard-item
-      [image]="{ src: 'globe.png', alt: 'A globe' }"
-      title="Traffic"
-    >
-      <app-traffic />
-    </app-dasboard-item>
-
-    <app-dasboard-item
-      [image]="{ src: 'list.png', alt: 'A list of items' }"
-      title="Support Tickets"
-    >
-      <app-tickets />
-    </app-dasboard-item>
-  </div>
-</main>
+<div id="inputs">
+  <p>
+    <label>Width</label>
+    <input type="number" step="1.0" [(ngModel)]="rectSize.width" />
+  </p>
+  <p>
+    <label>Height</label>
+    <input type="number" step="1.0" [(ngModel)]="rectSize.height" />
+  </p>
+</div>
+<!-- <app-rect [size]="rectSize" (sizeChange)="onReset($event)" /> -->
+<app-rect [(size)]="rectSize" />
