--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
-<div id="inputs">
-  <p>
-    <label>Width</label>
-    <input type="number" step="1.0" [(ngModel)]="rectSize.width" />
-  </p>
-  <p>
-    <label>Height</label>
-    <input type="number" step="1.0" [(ngModel)]="rectSize.height" />
-  </p>
-</div>
-<!-- <app-rect [size]="rectSize" (sizeChange)="onReset($event)" /> -->
-<app-rect [(size)]="rectSize" />
+<main>
+  <app-learning-resources />
+
+  <hr />
+
+  <app-auth />
+
+  <!-- @if (isAdmin()) {
+    <p>Only admins should see this!</p>
+  } -->
+
+  <p *ngIf="isAdmin()">Only admins should see this!</p>
+
+</main>
