--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <app-learning-resources />
+  <app-learning-resources appLog />
 
   <hr />
 
@@ -11,18 +11,18 @@
 
   <!-- <p *ngIf="isAdmin()">Only admins should see this!</p> -->
   
-  <ng-template appAuth="admin" >
+  <!-- <ng-template appAuth="admin" >
     <p>Only admins should see this!</p>
-  </ng-template>
+  </ng-template> -->
 
-  <!-- <p *appAuth="'admin'" class="protected-content admin">
+  <p *appAuth="'admin'" class="protected-content admin">
     Only admins should see this!
-  </p> -->
-  <!-- <p *appAuth="'user'" class="protected-content unauthenticated">
+  </p>
+  <p *appAuth="'user'" class="protected-content unauthenticated">
     Regular users should see this!
   </p>
   <p *appAuth="'guest'" class="protected-content authenticated">
     Guest users should see this!
-  </p> -->
+  </p>
 
 </main>
