--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,30 @@
 <main>
-  <app-learning-resources appLog />
+  <article class="temperatures">
+    <header>
+      <img src="temp-icon.png" alt="Thermometer icon" />
+      <div>
+        <h2>Current Temperatures</h2>
+        <p>{{ currentDate | date:'medium' }}</p>
+      </div>
+    </header>
+    <p>New York: {{ currentTemperaturs.newYork | temp: 'cel':'fah' }}</p>
+    <p>Berlin: {{ currentTemperaturs.berlin | temp: 'cel' }}</p>
+    <p>Paris: {{ currentTemperaturs.paris | temp: 'fah':'cel' }}</p>
+    <p>Chicago: {{ currentTemperaturs.chicago | temp: 'fah' }}</p>
+  </article>
 
-  <hr />
-
-  <app-auth />
-
-  <!-- @if (isAdmin()) {
-    <p>Only admins should see this!</p>
-  } -->
-
-  <!-- <p *ngIf="isAdmin()">Only admins should see this!</p> -->
-  
-  <!-- <ng-template appAuth="admin" >
-    <p>Only admins should see this!</p>
-  </ng-template> -->
-
-  <p *appAuth="'admin'" class="protected-content admin">
-    Only admins should see this!
-  </p>
-  <p *appAuth="'user'" class="protected-content unauthenticated">
-    Regular users should see this!
-  </p>
-  <p *appAuth="'guest'" class="protected-content authenticated">
-    Guest users should see this!
-  </p>
-
+  <article class="temperatures">
+    <header>
+      <img src="temp-icon.png" alt="Thermometer icon" />
+      <div>
+        <h2>Historic Temperatures</h2>
+        <p>Berlin</p>
+      </div>
+    </header>
+    <ul>
+      @for (temperature of historicTemperatures; track temperature) {
+      <li (click)="onReset($index)">{{ temperature | temp: 'cel' }}</li>
+      }
+    </ul>
+  </article>
 </main>
