--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<h1>Making Sense of Change Detection</h1>
+<img src="rxjs-logo.png" alt="The RxJS logo" />
+<h1>Understanding RxJS & Observables</h1>
+<p>Working with "Streams of Data".</p>
 
-<app-counter />
-<app-messages />
+<p>
+  <button (click)="onClick()">Click</button>
+</p>
 
-<p class="debug-output">{{ debugOutput }}</p>
+<p>
+  {{ clickCount() }}
+</p>
