--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,6 @@
-<img src="rxjs-logo.png" alt="The RxJS logo" />
-<h1>Understanding RxJS & Observables</h1>
-<p>Working with "Streams of Data".</p>
+<header>
+  <img src="logo.jpg" alt="A form and a pencil" />
+  <h1>Angular Forms</h1>
+</header>
 
-<p>
-  <button (click)="onClick()">Click</button>
-</p>
-
-<p>
-  {{ clickCount() }}
-</p>
-<p>
-  {{ intervalSignal() }}
-</p>
+<app-login />
