--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<header>
-  <img src="logo.jpg" alt="A form and a pencil" />
-  <h1>Angular Forms</h1>
-</header>
+<app-header />
 
-<app-signup />
+<main>
+  <app-users />
+
+  <div>
+    <p>Todo ...</p>
+  </div>
+</main>
