added routes and common section component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="u-all">
         <app-header />
-        <app-home />
+        <router-outlet />
         <app-footer/>
     </div>
 </main>
@@ -14,17 +14,17 @@
 <div><span id="top-link-block" class="affix hidden"><a class="well well-sm"><strong><i class="arrow_carrot-up_alt2"></i> Back to Top</strong></a></span></div>
 
 <style lang="scss">
-    @import 'https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900';
-    @import 'https://fonts.googleapis.com/css?family=Material+Icons';
+    @import '../css/raleway.css';
+    @import '../css/material-icons.css';
     @import '../font/style.css';
     @import '../css/font-awesome.min.css';
     @import '../css/animate.css';
     @import '../css/media.css';
-    @import '../css/jquery-ui.min.css';
-    @import '../css/magnific-popup.css';
+    /* @import '../css/jquery-ui.min.css'; */
+    /* @import '../css/magnific-popup.css'; */
     @import '../css/responsive.css';
     @import '../css/jquery-sliding-menu.css';
-    @import '../css/fhmm.css';
+    /* @import '../css/fhmm.css'; */
     @import '../css/extralayers.css';
 
 </style>
