--- a/src/app/main-content/company-profile/company-profile.component.html
+++ b/src/app/main-content/company-profile/company-profile.component.html
@@ -1,1 +1,98 @@
-<p>company-profile works!</p>
+<app-section classname="comprofile section-info">
+    <div class="container">
+        <div class="content-head center">
+            <h3 class="center_divider"><em>Company <span class="highlight-color">Profile</span></em>
+            </h3>
+        </div>
+        <div class="clearfix seprator_top_forty"></div>
+        <div class="col-md-12">
+            <div class="row">
+                <p>Established in 2009, Pacific Sea BPO Services Inc. rapidly transformed into one of
+                    the leading BPO companies.</p>
+                <p>Known for its culture of excellence, diversity and career growth opportunities.
+                </p>
+                <p>Powered by its pool of talented and experienced work force, the company continues
+                    to expand its operations and deliver top-notched products and services.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="col-md-12">
+            <div class="row">
+                <div style="text-align: center; margin: 0px auto;"><img
+                        src="/images/pages/makati.jpg" style="margin-bottom: 40px;"></div>
+                <h4><span class="highlight-color"> Living in Makati</span></h4>
+                <p>Makati is one of the most progressive business districts in the Philippines.
+                    Majority of the multinational companies and renowned financial hubs are located in the area.</p>
+                <p>Aside from its towering skyscrapers and scenic skyline, Makati is also a home to
+                    different embassies that cater to different nationalities. It is an expat’s haven.</p>
+                <p>The city is also a famous cultural hub. Different museums and galleries, which
+                    showcase world-class craftsmanship and artistry are also present.</p>
+                <p>At night, Makati transforms into an iconic hangout place for everyone. The area
+                    beams with different colors from cozy cafes, fine dining restaurants and posh bars.</p>
+                <p>For notorious shopaholics, there is no doubt that Makati is the place to be. It is
+                    just a 15-minute ride away from the 12th largest shopping mall in the world, SM Mall of Asia (MOA).
+                    Other than MOA, hotels, with great shops and finds can be also found in the place.</p>
+                <p>Convenient, safe, chic and highly industrialized, one can never go wrong in
+                    staying at Makati.</p>
+            </div>
+        </div>
+    </div>
+</app-section>
+
+<app-section classname="comprofile" idname="vision">
+    <div  class="container">
+        <div  class="col-md-12">
+            <div  class="row">
+                <h4 ><span  class="highlight-color">VISION</span></h4>
+                <p >Provide an unmatched experience to our customers by strategically utilizing our
+                    expertise as one of the industry's pioneers.</p>
+            </div>
+        </div>
+    </div>
+</app-section>
+
+<app-section classname="comprofile" idname="mission">
+    <div class="container">
+        <div class="col-md-12">
+            <div class="row">
+                <h4><span class="highlight-color">MISSION</span></h4>
+                <p>Deliver exceptional services by exceeding expectations in all aspects including technology, services
+                    and people.</p>
+                <ul class="diamond">
+                    <li>Customers: Constantly deliver and surpass customer satisfaction expectations through diverse
+                        offerings and top-notch services.</li>
+                    <li>Stakeholder: To establish a fair and rewarding environment that constantly seeks opportunities
+                        for the development of human capital, strengthening of organizational culture and promotion of
+                        respect and equality.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</app-section>
+
+<app-section classname="comprofile" idname="corevalues">
+    <div class="container">
+        <div class="col-md-12">
+            <div class="row">
+                <h4><span class="highlight-color">CORE VALUES</span></h4>
+                <p>The core values of PSP are derived from the synergy of the diverse cultures and nationalities that
+                    make up the company and guide the direction and decisions of the company</p>
+                <p><strong>EXCELLENCE:</strong> We always raise the bar higher. We constantly push ourselves to the
+                    limit. Excellence is a continuous endeavor, not a set goal.</p>
+                <p><strong>PASSION:</strong> We work in a multi-cultural environment and thus recognize the value and
+                    worth of a person regardless of their cultural background, values, beliefs and traditions.</p>
+                <p><strong>INNOVATION:</strong> We continuously research and identify new innovative ideas that would
+                    bring more benefits to our customers, employees and stakeholders alike.</p>
+                <p><strong>CUSTOMER-CENTRIC:</strong> Customer service is at the heart of everything we do. We see to it
+                    that we continuously meet and exceed the needs of our customers.</p>
+                <p><strong>UNITY:</strong> There is no "I" in a team. Individual skills can only do so much. But
+                    together, we are invincible.</p>
+                <p><strong>LEADERSHIP:</strong> We go beyond managing people. We are role models who motivate, inspire
+                    and lead them to paths of success.</p>
+                <div class="clearfix seprator_top_forty"></div>
+                <div class="clearfix seprator_top_forty"></div>
+            </div>
+        </div>
+    </div>
+</app-section>
