--- a/src/app/main-content/home/home.component.html
+++ b/src/app/main-content/home/home.component.html
@@ -3,11 +3,19 @@
 <app-banner-caption />
 <app-about-us />
 
-<app-home-section id_name="companyprofile" class_name="u-services">
+<app-container-row-section idname="companyprofile" classname="u-services">
     <app-home-profile />
-</app-home-section>
+</app-container-row-section>
 
+<app-container-row-section idname="careers" classname="u-works animated fadeInRight">
+    <app-home-careers />
+</app-container-row-section>
 
-<app-home-careers />
-<app-perks />
-<app-outreach />
+<app-container-row-section idname="perks" classname="blog_carousel-lite">
+    <app-perks />
+</app-container-row-section>
+
+<app-container-row-section idname="outreach" classname="u-outreach">
+    <app-outreach />
+</app-container-row-section>
+
