--- a/src/app/shared/container-row-section/container-row-section.component.html
+++ b/src/app/shared/container-row-section/container-row-section.component.html
@@ -1,4 +1,4 @@
-<section [id]="id_name" [class]="class_name" >
+<section [id]="idname" [class]="classname" >
     <div class="container">
         <div class="row">
                 <ng-content />
