--- a/src/app/main-content/faqs/faqs.component.html
+++ b/src/app/main-content/faqs/faqs.component.html
@@ -1,111 +1,12 @@
-<section id="companytrips" class="faq-info section-info">
-    <div class="container">
-        <div class="row">
-            <div class="content-head center">
-                <h3 class="center_divider"><em>FREQUENTLY ASKED <span
-                            class="highlight-color">QUESTIONS</span></em></h3>
-            </div>
-            <div class="col-md-9">
-                <div class="clearfix seprator_top_forty"></div>
-                <div id="accordion" class="accordiontwo">
-                    <div
-                        class="v-expansion-panels v-theme--light v-expansion-panels--variant-popout">
-                        <div class="v-expansion-panel v-expansion-panel--active active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title v-expansion-panel-title--active" type="button"
-                                aria-expanded="true"><span class="v-expansion-panel-title__overlay"></span>How do I
-                                apply?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-up mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text">
-                                <div class="v-expansion-panel-text__wrapper"><span>We prioritize
-                                        online applications, but we also entertain walk-in applicants.</span></div>
-                            </div>
-                        </div>
-                        <div class="v-expansion-panel v-expansion-panel--after-active active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>How long is the hiring process?<span
-                                    class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>How do I know the available
-                                positions?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>What are the benefits that you
-                                provide?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>Can I apply for different job
-                                positions?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>Do you provide accommodation for
-                                expat employees?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>What is the working schedule?<span
-                                    class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>How is the processing of the working
-                                visa done?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>How many employees do you have?<span
-                                    class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                        <div class="v-expansion-panel active">
-                            <div class="v-expansion-panel__shadow"></div><!----><!----><button
-                                class="v-expansion-panel-title" type="button" aria-expanded="false"><span
-                                    class="v-expansion-panel-title__overlay"></span>What is your working
-                                environment?<span class="v-expansion-panel-title__icon"><i
-                                        class="mdi-chevron-down mdi v-icon notranslate v-theme--light v-icon--size-default"
-                                        aria-hidden="true"></i></span></button>
-                            <div class="v-expansion-panel-text" style="display: none;"><!----></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<app-container-row-section idname="companytrips" classname="faq-info section-info">
+
+    <div class="content-head center">
+        <h3 class="center_divider"><em>FREQUENTLY ASKED <span class="highlight-color">QUESTIONS</span></em></h3>
     </div>
-</section>
+    <div class="col-md-9">
+        <div class="clearfix seprator_top_forty"></div>
+
+        <app-accordion [items]="faqsItems"></app-accordion>
+    </div>
+
+</app-container-row-section>
