--- a/public/css/media.css
+++ b/public/css/media.css
@@ -287,6 +287,12 @@ margin-bottom:50px;
 width:33.333%;
 }
 
+.positions {
+  border: 1px solid white;
+  border-radius: 1em;
+  margin-bottom: 50px;
+}
+
 
 
 }
