--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,11 +14,11 @@
             </div>
         </div>
     </div>
-    <div id="undefined-sticky-wrapper" class="sticky-wrapper" style="height: 108px;">
+    <div id="dash-top" class="sticky-wrapper" style="height: 108px;">
         <div class="u-header">
             <div class="container">
                 <div class="uh-logo pull-left">
-                    <h1><a href="/" title="Unique"><img src="/images/logo.png" class="img-responsive"
+                    <h1><a routerLink="/" title="Unique"><img src="/images/logo.png" class="img-responsive"
                                 alt="Pacific Sea BPO"></a></h1>
                 </div>
                 <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -26,16 +26,24 @@
                             class="icon_menu"></i></button></div>
                 <nav class="collapse navbar-collapse">
                     <ul id="headernavigation" class="nav navbar-nav pull-right">
-                        <li class="active"><a href="/"
-                                class="router-link-active router-link-exact-active page-scroll"
-                                aria-current="page">Home</a></li>
-                        <li><a href="/companyprofile" class="page-scroll">Company Profile</a></li>
-                        <li><a href="/careers" class="page-scroll">Careers</a></li>
-                        <li><a href="/faqs" class="page-scroll">FAQS</a></li>
-                        <li><a href="/#outreach" class="router-link-active router-link-exact-active page-scroll"
-                                aria-current="page">Outreach Programs</a></li>
-                        <li><a href="/#contact" class="router-link-active router-link-exact-active page-scroll"
-                                aria-current="page">Contact Us</a></li>
+                        <li>
+                            <a routerLink="/home" fragment="dash-top" class="page-scroll" aria-current="page" routerLinkActive="active">Home</a>
+                        </li>
+                        <li>
+                            <a routerLink="/companyprofile" class="page-scroll" routerLinkActive="active">Company Profile</a>
+                        </li>
+                        <li>
+                            <a routerLink="/careers" class="page-scroll" routerLinkActive="active">Careers</a>
+                        </li>
+                        <li>
+                            <a routerLink="/faqs" class="page-scroll" routerLinkActive="active">FAQS</a>
+                        </li>
+                        <li>
+                            <a routerLink="/home" fragment="outreach" class="page-scroll" aria-current="page">Outreach Programs</a>
+                        </li>
+                        <li>
+                            <a routerLink="/home" fragment="contact" class="page-scroll" aria-current="page">Contact Us</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -44,22 +52,33 @@
 </header>
 
 <div class="mob-header">
-    <div class="container"><img src="/images/logo.png" alt="">
+    <div class="container">
+        <a routerLink="/" title="Unique"><img src="/images/logo.png" class="img-responsive"
+            alt="Pacific Sea BPO"></a>
         <div class="nav-list">
             <div class="m-menu em"><span><i class="icon_menu"></i></span>
                 <div class="mob-menu">
                     <div id="menu" class="sliding-menu">
                         <div class="sliding-menu-wrapper" style="width: 298px;">
                             <ul id="menu-panel-k53yc" class="menu-panel-root" style="width: 298px;">
-                                <li><a href="/" class="router-link-active router-link-exact-active page-scroll"
-                                        aria-current="page">Home</a></li>
-                                <li><a href="/companyprofile" class="page-scroll">Company Profile</a></li>
-                                <li><a href="/careers" class="page-scroll">Careers</a></li>
-                                <li><a href="/faqs" class="page-scroll">FAQS</a></li>
-                                <li><a href="/#outreach" class="router-link-active router-link-exact-active page-scroll"
-                                        aria-current="page">Outreach Programs</a></li>
-                                <li><a href="/#contact" class="router-link-active router-link-exact-active page-scroll"
-                                        aria-current="page">Contact Us</a></li>
+                                <li>
+                                    <a routerLink="/home" fragment="dash-top" class="page-scroll" aria-current="page" routerLinkActive="active">Home</a>
+                                </li>
+                                <li>
+                                    <a routerLink="/companyprofile" class="page-scroll" routerLinkActive="active">Company Profile</a>
+                                </li>
+                                <li>
+                                    <a routerLink="/careers" class="page-scroll" routerLinkActive="active">Careers</a>
+                                </li>
+                                <li>
+                                    <a routerLink="/faqs" class="page-scroll" routerLinkActive="active">FAQS</a>
+                                </li>
+                                <li>
+                                    <a routerLink="/home" fragment="outreach" class="page-scroll" aria-current="page">Outreach Programs</a>
+                                </li>
+                                <li>
+                                    <a routerLink="/home" fragment="contact" class="page-scroll" aria-current="page">Contact Us</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
